Fixed transparent footer isssue on mobile

--- a/styles.css
+++ b/styles.css
@@ -353,6 +353,7 @@ footer {
   height: auto;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-window);
 }
 
 #commands {
